complete api resources
