# webapp/src/main/java/ar/edu/itba/paw/webapp/restcontrollers/UserController.java
@@ -5,11 +5,17 @@ import ar.edu.itba.paw.interfaces.exception.UserNotFoundException;
 import ar.edu.itba.paw.interfaces.services.UserService;
 import ar.edu.itba.paw.model.Token;
 import ar.edu.itba.paw.model.User;
+import ar.edu.itba.paw.model.enums.Platform;
 import ar.edu.itba.paw.webapp.auth.CurrentUserProvider;
 import ar.edu.itba.paw.webapp.auth.JwtTokenService;
+import ar.edu.itba.paw.webapp.dto.entities.CommentDTO;
+import ar.edu.itba.paw.webapp.dto.entities.UserAccountDTO;
 import ar.edu.itba.paw.webapp.dto.entities.UserDTO;
 import ar.edu.itba.paw.webapp.dto.params.ListUsersByNameParams;
+import ar.edu.itba.paw.webapp.dto.params.PaginationParams;
+import ar.edu.itba.paw.webapp.dto.requests.AddUserAccountRequest;
 import ar.edu.itba.paw.webapp.dto.requests.CreateUserRequest;
+import ar.edu.itba.paw.webapp.exception.ApiErrorFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
@@ -71,6 +77,90 @@ public class UserController {
         User user = us.findById(id).orElseThrow(UserNotFoundException::new);
 
         return Response.ok(UserDTO.fromUser(uriInfo, user)).build();
+    }
+
+    @GET
+    @Path("/{id}/comments")
+    @Produces(value = {Vendor.APPLICATION_COMMENT_LIST})
+    public Response getCommentsReceived(@PathParam("id") long id, @BeanParam PaginationParams paginationParams) {
+        if (id <= 0) {
+            return ApiErrorFactory.badRequest("Invalid user id");
+        }
+
+        int totalPages = us.getCommentPages(id);
+        int page = adjustPage(paginationParams.getPage(), totalPages);
+        List<CommentDTO> comments = us.getCommentsReceived(id, page).stream()
+                .map(CommentDTO.mapper(uriInfo))
+                .toList();
+
+        Response.ResponseBuilder responseBuilder = Response.ok(new GenericEntity<>(comments) {});
+        addPaginationLinks(responseBuilder, page, totalPages);
+        return responseBuilder.build();
+    }
+
+    @GET
+    @Path("/{id}/accounts")
+    @Produces(value = {Vendor.APPLICATION_USER_ACCOUNT_LIST})
+    public Response getUserAccounts(@PathParam("id") long id) {
+        if (id <= 0) {
+            return ApiErrorFactory.badRequest("Invalid user id");
+        }
+
+        List<UserAccountDTO> accounts = us.getUserAccounts(id).stream()
+                .map(UserAccountDTO.mapper(uriInfo))
+                .toList();
+
+        return Response.ok(new GenericEntity<>(accounts) {}).build();
+    }
+
+    @GET
+    @Path("/{id}/accounts/{platform}")
+    @Produces(value = {Vendor.APPLICATION_USER_ACCOUNT})
+    public Response getUserAccount(@PathParam("id") long id, @PathParam("platform") Platform platform) {
+        if (id <= 0) {
+            return ApiErrorFactory.badRequest("Invalid user id");
+        }
+        if (platform == null) {
+            return ApiErrorFactory.badRequest("Invalid platform");
+        }
+
+        return us.getUserAccounts(id).stream()
+                .filter(account -> account.getPlatform() == platform)
+                .findFirst()
+                .map(account -> Response.ok(UserAccountDTO.fromUserAccount(uriInfo, account)).build())
+                .orElseGet(() -> ApiErrorFactory.notFound("User account not found"));
+    }
+
+    @POST
+    @Path("/me/accounts")
+    @Consumes(value = {Vendor.APPLICATION_USER_ACCOUNT_CREATE})
+    @Produces(value = {Vendor.APPLICATION_USER_ACCOUNT_LIST})
+    public Response addCurrentUserAccount(@Valid AddUserAccountRequest request) {
+        us.addUserAccount(currentUserProvider.getCurrentUserId(), request.getPlatform(), request.getUsername());
+
+        List<UserAccountDTO> accounts = us.getUserAccounts(currentUserProvider.getCurrentUserId()).stream()
+                .map(UserAccountDTO.mapper(uriInfo))
+                .toList();
+
+        URI location = uriInfo.getBaseUriBuilder()
+                .path("users")
+                .path(String.valueOf(currentUserProvider.getCurrentUserId()))
+                .path("accounts")
+                .path(request.getPlatform().name())
+                .build();
+
+        return Response.created(location).entity(new GenericEntity<>(accounts) {}).build();
+    }
+
+    @DELETE
+    @Path("/me/accounts/{platform}")
+    public Response deleteCurrentUserAccount(@PathParam("platform") Platform platform) {
+        if (platform == null) {
+            return ApiErrorFactory.badRequest("Invalid platform");
+        }
+
+        us.deleteUserAccount(currentUserProvider.getCurrentUserId(), platform);
+        return Response.noContent().build();
     }
 
     @POST
